--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,7 @@
-body {
+html, body {
   margin: 0;
-  max-width: 100vw;
+  max-width: 100%;
+  height: 100%;
 }
 
 pre,
@@ -11,8 +12,8 @@ code {
 #pageContainer {
   display: flex;
   width: 100%;
-  max-width: 100vw;
-  height: 100vh;
+  max-width: 100%;
+  height: 100%;
 }
 
 #blocklyDiv {
@@ -31,10 +32,5 @@ code {
 }
 
 #generatedCode {
-  height: 50%;
   background-color: rgb(247, 240, 228);
-}
-
-#output {
-  height: 50%;
 }
